# filemanagement_dfs_service

./: README.md  distributedfile.gni  ohos.build
executable/: BUILD.gn  main.cpp
frameworks/native/: BUILD.gn  service_proxy.cpp  service_proxy.h
interfaces/innerkits/js/: @ohos.sendfile.d.ts  BUILD.gn
interfaces/innerkits/js/common/napi/: n_func_arg.h  n_val.cpp  n_val.h
interfaces/innerkits/js/mod_sendfile/: sendfile.cpp  sendfile.h  sendfile_napi.cpp  sendfile_napi.h
interfaces/innerkits/native/: BUILD.gn  daemon_proxy.h  deamon_proxy.h  distributedfile_ability_info.cpp  distributedfile_ability_info.h  i_distributedfile_service.h  service_proxy.h
services/: 4901.xml  4902.xml  BUILD.gn  distributed_file.para  distributedfile.cfg
services/distributedfiledaemon/: BUILD.gn
services/distributedfiledaemon/include/device/: device_info.h  device_manager_agent.h
services/distributedfiledaemon/include/ipc/: daemon.h
services/distributedfiledaemon/include/mountpoint/: mount_manager.h  mount_point.h
services/distributedfiledaemon/include/network/: base_session.h  kernel_talker.h  network_agent_template.h  session_pool.h
services/distributedfiledaemon/include/network/softbus/: softbus_agent.h  softbus_session.h
services/distributedfiledaemon/src/device/: device_info.cpp  device_manager_agent.cpp
services/distributedfiledaemon/src/mountpoint/: mount_manager.cpp  mount_point.cpp
services/distributedfiledaemon/src/network/: kernel_talker.cpp  network_agent_template.cpp  session_pool.cpp
services/distributedfiledaemon/src/network/softbus/: softbus_agent.cpp  softbus_session.cpp  softbus_session_dispatcher.cpp
services/distributedfiledaemon/test/unittest/: BUILD.gn
services/distributedfiledaemon/test/unittest/device/: device_manager_agent_test.cpp
services/distributedfiledeamon/: BUILD.gn
services/distributedfiledeamon/include/device/: device_info.h  device_manager_agent.h
services/distributedfiledeamon/include/ipc/: deamon.h  deamon_stub.h  i_deamon.h
services/distributedfiledeamon/include/mountpoint/: mount_manager.h  mount_point.h
services/distributedfiledeamon/include/network/: base_session.h  kernel_talker.h  network_agent_template.h  session_pool.h
services/distributedfiledeamon/include/network/softbus/: softbus_agent.h  softbus_session.h  softbus_session_dispatcher.h  softbus_session_name.h
services/distributedfiledeamon/src/device/: device_info.cpp  device_manager_agent.cpp
services/distributedfiledeamon/src/ipc/: deamon.cpp  deamon_stub.cpp
services/distributedfiledeamon/src/mountpoint/: mount_manager.cpp  mount_point.cpp
services/distributedfiledeamon/src/network/: kernel_talker.cpp  network_agent_template.cpp  session_pool.cpp
services/distributedfiledeamon/src/network/softbus/: softbus_agent.cpp  softbus_session.cpp  softbus_session_dispatcher.cpp
services/distributedfiledeamon/test/unittest/: BUILD.gn
services/distributedfiledeamon/test/unittest/device/: device_manager_agent_test.cpp
services/distributedfileservice/: BUILD.gn
services/distributedfileservice/include/device/: device_manager_agent.h
services/distributedfileservice/include/ipc/: distributedfile_service.h  distributedfile_service_stub.h  i_distributedfile_service.h
services/distributedfileservice/include/network/: softbus_agent.h  softbus_dispatcher.h
services/distributedfileservice/src/device/: device_manager_agent.cpp
services/distributedfileservice/src/ipc/: distributedfile_service.cpp  distributedfile_service_stub.cpp
services/distributedfileservice/src/network/: softbus_agent.cpp  softbus_dispatcher.cpp
test/moduletest/: BUILD.gn
test/moduletest/src/: distributedfiledaemon_service_test.cpp  distributedfiledeamon_service_test.cpp
utils/: BUILD.gn
utils/log/include/: utils_log.h
utils/log/src/: utils_log.cpp
utils/system/include/: utils_actor.h  utils_cmd.h  utils_dfs_thread.h  utils_directory.h  utils_exception.h  utils_mount_argument.h  utils_singleton.h
utils/system/src/: utils_directory.cpp  utils_mount_argument.cpp
