# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

ohos_executable("xhl_test-sa") {  
  include_dirs = [
    "../frameworks/native",
    "../utils/log/include"
  ]

  sources = [ "main.cpp" ]

  defines = [
    "LOG_DOMAIN=0xD001600",
    "LOG_TAG=\"xhl_test_exec\"",
  ]

  external_deps = [
    "aafwk_standard:want",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  deps = [ 
    "../utils:libdistributedfileutils",
    "../interfaces/innerkits/native:libdistributedfile_innerkits",
   ]

  install_enable = true
  part_name = "storage_distributed_file_manager"
  subsystem_name = "storage"
}
