# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

file_common_src = [
  "//foundation/storage/distributed_file_manager/interfaces/innerkits/js/common/fd_guard.cpp",
  "//foundation/storage/distributed_file_manager/interfaces/innerkits/js/common/uni_error.cpp",

  "//foundation/storage/distributed_file_manager/interfaces/innerkits/js/common/napi/n_class.cpp",
  "//foundation/storage/distributed_file_manager/interfaces/innerkits/js/common/napi/n_func_arg.cpp",
  "//foundation/storage/distributed_file_manager/interfaces/innerkits/js/common/napi/n_val.cpp",

  "//foundation/storage/distributed_file_manager/interfaces/innerkits/js/common/napi/n_async/n_async_work_callback.cpp",
  "//foundation/storage/distributed_file_manager/interfaces/innerkits/js/common/napi/n_async/n_async_work_promise.cpp",
  "//foundation/storage/distributed_file_manager/interfaces/innerkits/js/common/napi/n_async/n_ref.cpp",
]

ohos_shared_library("sendfile") {
  relative_install_dir = "module"
  subsystem_name = "storage"
  part_name = "storage_distributed_file_manager"

  cflags_cc = [
    "-Wno-unused-function"
  ]

  include_dirs = [
    ".",
    "//foundation/storage/distributed_file_manager/interfaces/innerkits/js/common/napi/n_async",
    "//foundation/storage/distributed_file_manager/services/distributedfileservice/include/ipc",
    "//foundation/storage/distributed_file_manager/services/distributedfileservice/include",
    "//foundation/storage/distributed_file_manager/interfaces/innerkits/native",
    "//foundation/storage/distributed_file_manager/frameworks/native",
    "//foundation/communication/ipc/interfaces/innerkits/libdbinder/include",
    "//foundation/distributedschedule/samgr/services/samgr/native/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",

    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//foundation/ace/napi/interfaces/kits",
    "//utils/system/safwk/native/include",
    "//utils/native/base/include",
  ]

  sources = file_common_src
  sources += [
    "//foundation/storage/distributed_file_manager/interfaces/innerkits/js/mod_sendfile/sendfile.cpp",
    "//foundation/storage/distributed_file_manager/interfaces/innerkits/js/mod_sendfile/sendfile_napi.cpp",
  ]

  deps = [
    "//foundation/ace/napi:ace_napi",
    "//utils/native/base:utils",
    "//foundation/storage/distributed_file_manager/interfaces/innerkits/native:libdistributedfile_innerkits",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
  ]

  external_deps = [
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
    "hiviewdfx_hilog_native:libhilog",
  ]
}

group("build_kits_js") {
  deps = [
    ":sendfile",
  ]
}
